# nano_parser_gen

./: Cargo.toml  README.md
nano_parser_gen/: Cargo.toml
nano_parser_gen/src/: lib.rs
nano_parser_gen/src/error/: mod.rs  source_quote.rs
nano_parser_gen/src/lexer/: builder.rs  mod.rs  source_file.rs  token.rs  tokens.rs
nano_parser_gen/src/parser/: mod.rs
nano_parser_gen/src/util/: mod.rs
nano_parser_gen_macro/: Cargo.toml
nano_parser_gen_macro/src/: ast.rs  grammar_data.rs  lib.rs  preprocess_rust_code.rs
nano_parser_gen_macro/src/grammar/: decls.rs  mod.rs  rules.rs
nano_parser_gen_macro/src/grammar/template/: builtins.rs  definition.rs  instance.rs  mod.rs
nano_parser_gen_macro/src/parsing/: decls.rs  mod.rs  rules.rs  template.rs
parser_gen/: Cargo.toml
parser_gen/src/: from_lexed.rs
parser_gen/src/lexer/: lexer_struct.rs  tokens.rs
parser_gen/src/parser/: mod.rs
parser_gen_macro/: Cargo.toml
parser_gen_macro/src/: grammar_data.rs  lib.rs  preprocess_rust_code.rs
src/: ast.rs  main.rs  parse.rs
src/error/: mod.rs
src/example1/: ast.rs  mod.rs  parse.rs
src/example1/parse/: util.rs
src/parse/: util.rs
