[package]
name = "rust_parser_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nano_parser_gen_macro = { version = "0.2.1", path = "nano_parser_gen_macro" }
nano_parser_gen = { version = "0.2.1", path = "nano_parser_gen" }
