[package]
name = "nano_parser_gen"
version = "0.2.1"
edition = "2021"
description = "A parser generator inspired by yacc (types and functions)"
license = "MIT"
repository = "https://github.com/ClementChambard/rust_parser_generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
regex = "1.10.2"
