[package]
name = "nano_parser_gen_macro"
version = "0.2.0"
edition = "2021"
description = "A parser generator inspired by yacc (procedural macro)"
license = "MIT"
repository = "https://github.com/ClementChambard/rust_parser_generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full"] }
